deployments/code-generate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-deploy
  template:
    metadata:
      labels:
        app: code-deploy
    spec:
      containers:
        - name: code-deploy
          image: farid25/code-generate:v9
          ports:
            - containerPort: 5000 # Adjust port if your Node.js app uses a different one
---
apiVersion: v1
kind: Service
metadata:
  name: code-deploy-service
spec:
  selector:
    app: code-deploy
  ports:
    - port: 5050
      targetPort: 5000
