deployments/image-generate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-deploy
  template:
    metadata:
      labels:
        app: image-deploy
    spec:
      containers:
        - name: image-deploy
          image: farid25/image-generate:v1
          ports:
            - containerPort: 6000 # Adjust port if your FastAPI app uses a different one
---
apiVersion: v1
kind: Service
metadata:
  name: image-deploy-service
spec:
  selector:
    app: image-deploy
  ports:
    - port: 5050
      targetPort: 6000
